# ard-engine

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
crates/ard-assets/: Cargo.toml
crates/ard-assets/assets/: packages.ron
crates/ard-assets/src/: asset.rs  filesystem.rs  handle.rs  lib.rs  loader.rs  manager.rs  tests.rs
crates/ard-assets/src/package/: folder.rs  lof.rs  manifest.rs  mod.rs
crates/ard-core/: Cargo.toml
crates/ard-core/src/: app.rs  core.rs  destroy.rs  lib.rs  plugin.rs  stat.rs  tests.rs
crates/ard-ecs/: Cargo.toml
crates/ard-ecs/ard-ecs-derive/: Cargo.toml
crates/ard-ecs/ard-ecs-derive/src/: lib.rs
crates/ard-ecs/examples/: bench.rs  example.rs
crates/ard-ecs/src/: access.rs  entity.rs  event.rs  id_map.rs  key.rs  lib.rs  prw_lock.rs  tests.rs
crates/ard-ecs/src/archetype/: mod.rs
crates/ard-ecs/src/component/: access.rs  filter.rs  mod.rs  pack.rs
crates/ard-formats/: Cargo.toml
crates/ard-formats/src/: cube_map.rs  lib.rs  material.rs  mesh.rs  meshlet.rs  model.rs  texture.rs  vertex.rs
crates/ard-game/: Cargo.toml
crates/ard-game/ard-game-derive/: Cargo.toml
crates/ard-game/src/: destroy.rs  lib.rs  lighting.rs  save_data.rs  scene.rs  serialization.rs  settings.rs
crates/ard-gltf/: Cargo.toml
crates/ard-gltf/src/: lib.rs
crates/ard-graphics-api/: Cargo.toml
crates/ard-graphics-api/src/: camera.rs  context.rs  cube_map.rs  debug_gui.rs  factory.rs  lib.rs  lighting.rs  material.rs  mesh.rs  pipeline.rs  renderer.rs  shader.rs  surface.rs  texture.rs
crates/ard-graphics-assets/: Cargo.toml
crates/ard-graphics-assets/src/: cube_maps.rs  lib.rs  model.rs  pbr.rs  pipelines.rs  shaders.rs  textures.rs
crates/ard-graphics-vk/: Cargo.toml  build.rs  constants.ron
crates/ard-graphics-vk/examples/: color.frag  compile_shaders.sh  many_cubes.rs  materials.rs  pbr.frag  pbr.rs  rotating_cubes.rs  textured.frag  textured.vert  textures.rs  triangle.frag  triangle.rs  util.rs
crates/ard-graphics-vk/shader_includes/: constants.glsl  data_structures.glsl  user_shaders.glsl
crates/ard-graphics-vk/src/: alloc.rs  camera.rs  context.rs  cube_map.rs  debug_gui.rs  lib.rs  lighting.rs  material.rs  mesh.rs  pipeline.rs  shader.rs  shader_constants.rs  surface.rs  texture.rs  util.rs
crates/ard-pal/: Cargo.toml  build.rs
crates/ard-pal/api/: Cargo.toml
crates/ard-pal/examples/: blank_window.rs  complex.rs  performance.rs  textured_cube.rs  triangle.rs  uniform_buffer.rs  util.rs
crates/ard-pal/src/: lib.rs
crates/ard-physics/: Cargo.toml
crates/ard-physics/src/: collider.rs  engine.rs  lib.rs  rigid_body.rs
crates/ard-prefab/: Cargo.toml
crates/ard-prefab/src/: asset.rs  instance.rs  lib.rs
crates/ard-render/: Cargo.toml  build.rs  config.ron
crates/ard-render-assets/: Cargo.toml
crates/ard-render-assets/src/: lib.rs  loader.rs  material.rs  mesh.rs  model.rs  texture.rs
crates/ard-render-base/: Cargo.toml
crates/ard-render-base/src/: ecs.rs  lib.rs  module.rs  resource.rs  shader_variant.rs
crates/ard-render-camera/: Cargo.toml  build.rs
crates/ard-render-camera/shaders/: froxel_gen.comp
crates/ard-render-camera/src/: active.rs  froxels.rs  lib.rs  target.rs  ubo.rs
crates/ard-render-debug/: Cargo.toml
crates/ard-render-debug/src/: buffer.rs  lib.rs  shape.rs
crates/ard-render-gui/: Cargo.toml
crates/ard-render-gui/src/: lib.rs  view.rs
crates/ard-render-image-effects/: Cargo.toml  build.rs
crates/ard-render-image-effects/shaders/: adaptive_lum.comp  adaptive_lum_histogram_gen.comp  ao_blur.comp  ao_blur.frag  ao_construct.comp  bloom_downscale.frag  bloom_upscale.frag  fxaa.frag  graphics_effect.vert  lxaa.frag  sun_shafts.comp  tonemapping.frag
crates/ard-render-image-effects/src/: ao.rs  bloom.rs  effects.rs  fxaa.rs  lib.rs  lxaa.rs  smaa.rs  sun_shafts.rs  sun_shafts2.rs  tonemapping.rs
crates/ard-render-lighting/: Cargo.toml  build.rs
crates/ard-render-lighting/shaders/: di_gather.comp  di_par_reduce.comp  di_render.frag  env_prefilter.frag  light_clustering.comp  proc_skybox.frag  proc_skybox.vert  skybox.glsl
crates/ard-render-lighting/src/: clustering.rs  global.rs  lib.rs  lights.rs  proc_skybox.rs  reflections.rs  shadows.rs
crates/ard-render-meshes/: Cargo.toml
crates/ard-render-meshes/src/: lib.rs  mesh.rs  vertices.rs
crates/ard-render-objects/: Cargo.toml
crates/ard-render-objects/src/: keys.rs  lib.rs  objects.rs  set.rs
crates/ard-render-pbr/: Cargo.toml  build.rs
crates/ard-render-pbr/shaders/: pbr.frag  pbr.ms.glsl  pbr.rchit  pbr.refl.rchit  pbr.ts.glsl  pbr.vert  pbr_brdf.glsl  pbr_common.fs.glsl  pbr_common.glsl  pbr_common.ms.glsl  pbr_common.rt.glsl  pbr_common.ts.glsl  pbr_common.vs.glsl
crates/ard-render-pbr/src/: lib.rs
crates/ard-render-raytracing/: Cargo.toml
crates/ard-render-raytracing/src/: pipeline.rs
crates/ard-render-renderers/: Cargo.toml  build.rs
crates/ard-render-renderers/shaders/: debug.frag  debug.vert  draw_compact.comp  draw_gen.comp  entity_select.comp  gui.frag  gui.vert  hzb_gen.comp  rt_test.rgen  rt_test.rmiss
crates/ard-render-renderers/src/: bins.rs  calls.rs  debug.rs  draw_gen.rs  entities.rs  global.rs  gui.rs  highz.rs  ids.rs  lib.rs  pathtracer.rs  raytrace.rs  reflections.rs  scene.rs  shadow.rs  state.rs
crates/ard-render-si/: Cargo.toml
crates/ard-render-si/defs/: bindings.ron  constants.ron  types.ron
crates/ard-render-si/src/: lib.rs
crates/ard-render-textures/: Cargo.toml
crates/ard-render-textures/src/: factory.rs  lib.rs  texture.rs
crates/ard-render/shaders/: utils.glsl
crates/ard-render/src/: blas.rs  camera.rs  canvas.rs  cube_map.rs  ecs.rs  factory.rs  frame.rs  lib.rs  lighting.rs  material.rs  mesh.rs  pbr.rs  renderer.rs  shader_constants.rs  staging.rs  static_geometry.rs  system.rs  texture.rs
crates/ard-save-load/: Cargo.toml
crates/ard-save-load/src/: entity_map.rs  format.rs  lib.rs  load_data.rs  loader.rs  save_data.rs  saver.rs
crates/ard-window/: Cargo.toml
crates/ard-window/src/: lib.rs  runner.rs  window.rs  windows.rs
(+567 files in other folders)
