[package]
name = "ard-engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "crates/*", "tools/editor", "tools/gltf-oven", "tools/ibl-oven" ]

[workspace.package]
version = "0.1.0"
edition = "2021"

[features]
default = [ "input", "assets", "render", "window", ]
input = [ "ard-input" ]
assets = [ "ard-assets" ]
render = [ "window", "ard-pal" ]
window = [ "ard-window", "ard-winit" ]

[dependencies]
# Required
ard-core = { path = "./crates/ard-core" }
ard-ecs = { path = "./crates/ard-ecs" }
ard-log = { path = "./crates/ard-log" }
ard-math = { path = "./crates/ard-math" }
ard-formats = { path = "./crates/ard-formats" }
ard-alloc = { path = "./crates/ard-alloc" }
# ard-game = { path = "./crates/ard-game" }

# Optional
ard-input = { path = "./crates/ard-input", optional = true }
ard-assets = { path = "./crates/ard-assets", optional = true }
ard-window = { path = "./crates/ard-window", optional = true }
ard-winit = { path = "./crates/ard-winit", optional = true }
ard-render-camera = { path = "./crates/ard-render-camera" }
ard-render-material = { path = "./crates/ard-render-material" }
ard-render-meshes = { path = "./crates/ard-render-meshes" }
ard-render-pbr = { path = "./crates/ard-render-pbr" }
ard-render-objects = { path = "./crates/ard-render-objects" }
ard-render-lighting = { path = "./crates/ard-render-lighting" }
ard-render-image-effects = { path = "./crates/ard-render-image-effects" }
ard-render-gui = { path = "./crates/ard-render-gui" }
ard-render = { path = "./crates/ard-render" }
ard-render-assets = { path = "./crates/ard-render-assets" }
ard-pal = { path = "./crates/ard-pal", optional = true }

[workspace.dependencies]
allocator-api2 = { version = "0.2" }
anymap = { version = "0.12" }
arrayvec = { version = "0.7.4" }
async-trait = { version = "0.1" }
bincode = { version = "1" }
bitflags = { version = "2", features = [ "serde" ] }
bitvec = { version = "1" }
bytemuck = { version = "1", features = [ "extern_crate_alloc" ] }
crossbeam-channel = { version = "0.5" }
crossbeam-utils = { version = "0.8" }
dashmap = { version = "5" }
egui = { version = "0.26", features = [ "bytemuck", "mint" ] }
egui_dock = { version = "0.11" }
enum_dispatch = { version = "0.3" }
futures = { version = "0.3" }
gltf = { version = "1", features = [ "KHR_lights_punctual" ] }
half = { version = "2.1.0", features = [ "bytemuck", "serde" ] }
image = { version = "0.24" }
itertools = { version = "0.11.0" }
num_cpus = { version = "1" }
paste = { version = "1" }
ordered-float = { version = "3" }
puffin = { version = "0.19" }
puffin_http = { version = "0.16" }
raw-window-handle = { version = "0.5" }
rayon = { version = "1" }
ron = { version = "0.8" }
rustc-hash = { version = "1.1" }
serde = { version = "1", features = [ "derive" ] }
serde_with = { version = "3" }
smallvec = { version = "1", features = ["serde", "union"] }
thiserror = { version = "1" }
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "fs", "io-util", "io-std", "macros" ] }
tokio-stream = { version = "0.1" }
unsafe_unwrap = { version = "0.1" }
winit = { version = "0.28" }
static_assertions = { version = "1.1" }

[dev-dependencies]
puffin = { version = "0.19" }
puffin_http = { version = "0.16" }
rand = "0.8"
bytemuck.workspace = true
tokio.workspace = true
egui.workspace = true

[profile.opt-dev]
inherits = "dev"
debug = 1
opt-level = 3
incremental = true

[profile.release]
debug = 0
strip = "debuginfo"
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = true