[package]
name = "ard-assets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-core = { version = "0.1", path = "../ard-core" }
ard-ecs = { version = "0.1", path = "../ard-ecs" }
async-trait = "0.1"
thiserror = "1.0"
enum_dispatch = "0.3"
tokio = { version = "1.18", features = [ "rt", "rt-multi-thread", "fs", "io-util", "io-std" ] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
anymap = "0.12"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
flurry = "0.4"
fxhash = "0.2"