[package]
name = "ard-assets"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-core = { path = "../ard-core" }
ard-log = { path = "../ard-log" }
ard-ecs = { path = "../ard-ecs" }
async-trait.workspace = true
thiserror.workspace = true
enum_dispatch.workspace = true
tokio.workspace = true
serde.workspace = true
ron.workspace = true
crossbeam-utils.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
zstd.workspace = true
bytemuck.workspace = true
bincode.workspace = true
thread-priority.workspace = true
path-slash = "0.2"