[package]
name = "ard-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-ecs = { version = "0.1", git = "ssh://git@github.com/ReeCocho/ard-ecs.git", branch = "main" }
rayon = "1.5"
num_cpus = "1.13"