[package]
name = "ard-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-ecs = { path = "../ard-ecs" }
ard-log = { path = "../ard-log" }
rayon.workspace = true
num_cpus.workspace = true