[package]
name = "ard-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
anymap = "0.12"
rayon = "1.5"
unsafe_unwrap = "0.1"
crossbeam-channel = "0.5"
bitvec = "1.0"
num_cpus = "1.13"
bytemuck = "1"
smallvec = "1"
ard-ecs-derive = { path = "./ard-ecs-derive/" }

[profile.release]
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"