[package]
name = "ard-ecs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-ecs-derive = { path = "./ard-ecs-derive/" }
anymap.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
num_cpus.workspace = true
bytemuck.workspace = true
smallvec.workspace = true
paste.workspace = true
unsafe_unwrap.workspace = true
bitvec.workspace = true
thiserror.workspace = true
