[package]
name = "ard-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-math = { version = "0.1", path = "../ard-math" }
ard-ecs = { version = "0.1", path = "../ard-ecs" }
ard-core = { version = "0.1", path = "../ard-core" }
ard-assets = { version = "0.1", path = "../ard-assets" }
crossbeam-channel = "0.5"
smallvec = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_with = "1"
enum_dispatch = "0.3"
paste = "1"
ard-game-derive = { path = "./ard-game-derive/" }