[package]
name = "ard-game"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-math = { path = "../ard-math" }
ard-ecs = { path = "../ard-ecs" }
ard-core = { path = "../ard-core" }
ard-assets = { path = "../ard-assets" }
ard-render = { path = "../ard-render" }
ard-save-load = { path = "../ard-save-load" }
ard-render-objects = { path = "../ard-render-objects" }
ard-render-assets = { path = "../ard-render-assets" }
crossbeam-channel.workspace = true
smallvec.workspace = true
serde.workspace = true
enum_dispatch.workspace = true
paste.workspace = true
serde_with.workspace = true