[package]
name = "ard-gltf"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-pal = { default-features = false, path = "../ard-pal" }
ard-math = { path = "../ard-math" }
serde.workspace = true
thiserror.workspace = true
rayon.workspace = true
bytemuck.workspace = true
gltf.workspace = true