[package]
name = "ard-graphics-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-window = { version = "0.1", git = "ssh://git@github.com/ReeCocho/ard-window.git", branch = "main" }
ard-ecs = { version = "0.1", git = "ssh://git@github.com/ReeCocho/ard-ecs.git", branch = "main" }
thiserror = "1.0"
glam = { version = "0.18", features = ["bytemuck"] }
bytemuck = "1.7"