[package]
name = "ard-graphics-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-window = { version = "0.1", path = "../ard-window" }
ard-ecs = { version = "0.1", path = "../ard-ecs" }
ard-math = { version = "0.1", path = "../ard-math" }
thiserror = "1.0"
bytemuck = "1.7"
serde = { version = "1", features = ["derive"] }
enumflags2 = "0.7"
imgui = { version = "0.8.1-alpha.0", features = ["docking"], git = "https://github.com/imgui-rs/imgui-rs" }