[package]
name = "ard-graphics-vk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-core = { version = "0.1", path = "../ard-core" }
ard-window = { version = "0.1", path = "../ard-window" }
ard-winit = { version = "0.1", path = "../ard-winit" }
ard-ecs = { version = "0.1", path = "../ard-ecs" }
ard-math = { version = "0.1", path = "../ard-math" }
ard-graphics-api = { version = "0.1", path = "../ard-graphics-api" }
ard-render-graph = { version = "0.1", path = "../ard-render-graph" }
ard-log = { version = "0.1", path = "../ard-log" }
ard-input = { version = "0.1", path = "../ard-input" }
ash = "0.37.0+1.3.209"
ash-window = "0.10"
winit = "0.25"
gpu-allocator = "0.18"
crossbeam-channel = "0.5"
bytemuck = "1.7"
dashmap = "4.0"
rayon = "1.5"
imgui = { version = "0.8.1-alpha.0", features = ["docking"], git = "https://github.com/imgui-rs/imgui-rs" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.7"