[package]
name = "ard-pal"
version.workspace = true
edition.workspace = true
autoexamples = false
build = "build.rs"

[features]
default = [ "vulkan" ]
vulkan = [ "dep:vulkan" ]

[dependencies]
api = { path = "./api/" }
vulkan = { path = "./backends/vulkan/", optional = true }
empty = { path = "./backends/empty/" }
cfg-if = "1.0.0"

[dev-dependencies]
bytemuck.workspace = true
ordered-float.workspace = true
futures.workspace = true
winit.workspace = true
glam = { version = "0.21", features = [ "bytemuck" ] }
wgpu = { version = "0.16", features = [ "spirv" ] }

[[example]]
name = "blank_window"

[[example]]
name = "complex"

[[example]]
name = "triangle"

[[example]]
name = "uniform_buffer"

[[example]]
name = "textured_cube"

[[example]]
name = "performance"