[package]
name = "ard-render-assets"
version.workspace = true
edition.workspace = true

[dependencies]
ard-core = { path = "../ard-core" }
ard-formats = { path = "../ard-formats" }
ard-assets = { path = "../ard-assets" }
ard-render-base = { path = "../ard-render-base" }
ard-render-objects = { path = "../ard-render-objects" }
ard-render-meshes = { path = "../ard-render-meshes" }
ard-render-material = { path = "../ard-render-material" }
ard-render-textures = { path = "../ard-render-textures" }
ard-render-pbr = { path = "../ard-render-pbr" }
ard-render = { path = "../ard-render" }
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-log = { path = "../ard-log" }
ard-ecs = { path = "../ard-ecs" }
thiserror.workspace = true
serde.workspace = true
rustc-hash.workspace = true
static_assertions.workspace = true
async-trait.workspace = true
ron.workspace = true
futures.workspace = true
bincode.workspace = true