[package]
name = "ard-render-camera"
version.workspace = true
edition.workspace = true

[dependencies]
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-ecs = { path = "../ard-ecs" }
ard-formats = { path = "../ard-formats" }
ard-transform = { path = "../ard-transform" }
ard-render-base = { path = "../ard-render-base" }
ard-render-objects = { path = "../ard-render-objects" }
ard-render-si = { path = "../ard-render-si" }
bytemuck.workspace = true
rustc-hash.workspace = true

[build-dependencies]
ard-render-codegen = { path = "../ard-render-codegen" }
ard-render-si = { path = "../ard-render-si" }