[package]
name = "ard-render-lighting"
version.workspace = true
edition.workspace = true

[dependencies]
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-ecs = { path = "../ard-ecs" }
ard-core = { path = "../ard-core" }
ard-formats = { path = "../ard-formats" }
ard-render-camera = { path = "../ard-render-camera" }
ard-render-base = { path = "../ard-render-base" }
ard-render-objects = { path = "../ard-render-objects" }
ard-render-si = { path = "../ard-render-si" }
bytemuck.workspace = true
rustc-hash.workspace = true
ordered-float.workspace = true

[build-dependencies]
ard-render-codegen = { path = "../ard-render-codegen" }
ard-render-si = { path = "../ard-render-si" }