[package]
name = "ard-render-meshes"
version.workspace = true
edition.workspace = true

[dependencies]
ard-formats = { path = "../ard-formats" }
ard-alloc = { path = "../ard-alloc" }
ard-render-base = { path = "../ard-render-base" }
ard-render-si = { path = "../ard-render-si" }
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-log = { path = "../ard-log" }
ard-ecs = { path = "../ard-ecs" }
thiserror.workspace = true
serde.workspace = true
rustc-hash.workspace = true
static_assertions.workspace = true
bytemuck.workspace = true