[package]
name = "ard-render-objects"
version.workspace = true
edition.workspace = true

[dependencies]
ard-core = { path = "../ard-core" }
ard-log = { path = "../ard-log" }
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-ecs = { path = "../ard-ecs" }
ard-formats = { path = "../ard-formats" }
ard-alloc = { path = "../ard-alloc" }
ard-render-base = { path = "../ard-render-base" }
ard-render-si = { path = "../ard-render-si" }
ard-render-material = { path = "../ard-render-material" }
ard-render-meshes = { path = "../ard-render-meshes" }
bytemuck.workspace = true
serde.workspace = true
bitflags.workspace = true
ordered-float.workspace = true
rustc-hash.workspace = true

[build-dependencies]
ard-render-codegen = { path = "../ard-render-codegen" }
