[package]
name = "ard-render-raytracing"
version.workspace = true
edition.workspace = true

[dependencies]
ard-formats = { path = "../ard-formats" }
ard-render-base = { path = "../ard-render-base" }
ard-render-material = { path = "../ard-render-material" }
ard-render-si = { path = "../ard-render-si" }
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-log = { path = "../ard-log" }
ard-ecs = { path = "../ard-ecs" }
thiserror.workspace = true
serde.workspace = true
rustc-hash.workspace = true
bitflags.workspace = true
bytemuck.workspace = true