[package]
name = "ard-render-renderers"
version.workspace = true
edition.workspace = true

[dependencies]
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-log = { path = "../ard-log" }
ard-formats = { path = "../ard-formats" }
ard-ecs = { path = "../ard-ecs" }
ard-render-base = { path = "../ard-render-base" }
ard-render-material = { path = "../ard-render-material" }
ard-render-si = { path = "../ard-render-si" }
ard-render-meshes = { path = "../ard-render-meshes" }
ard-render-objects = { path = "../ard-render-objects" }
ard-render-camera = { path = "../ard-render-camera" }
bytemuck.workspace = true
ordered-float.workspace = true

[build-dependencies]
ard-render-codegen = { path = "../ard-render-codegen" }
ard-render-si = { path = "../ard-render-si" }