[package]
name = "ard-render-renderers"
version.workspace = true
edition.workspace = true

[dependencies]
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-log = { path = "../ard-log" }
ard-formats = { path = "../ard-formats" }
ard-ecs = { path = "../ard-ecs" }
ard-core = { path = "../ard-core" }
ard-transform = { path = "../ard-transform" }
ard-render-base = { path = "../ard-render-base" }
ard-render-material = { path = "../ard-render-material" }
ard-render-si = { path = "../ard-render-si" }
ard-render-gui = { path = "../ard-render-gui" }
ard-render-meshes = { path = "../ard-render-meshes" }
ard-render-objects = { path = "../ard-render-objects" }
ard-render-camera = { path = "../ard-render-camera" }
ard-render-lighting = { path = "../ard-render-lighting" }
ard-render-textures = { path = "../ard-render-textures" }
ard-render-raytracing = { path = "../ard-render-raytracing" }
ard-render-image-effects = { path = "../ard-render-image-effects" }
ard-render-debug = { path = "../ard-render-debug" }
bytemuck.workspace = true
ordered-float.workspace = true
rayon.workspace = true
puffin.workspace = true
egui.workspace = true

[build-dependencies]
ard-render-codegen = { path = "../ard-render-codegen" }
ard-render-si = { path = "../ard-render-si" }