[package]
name = "ard-render"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ard-core = { path = "../ard-core" }
ard-window = { path = "../ard-window" }
ard-winit = { path = "../ard-winit" }
ard-ecs = { path = "../ard-ecs" }
ard-math = { path = "../ard-math" }
ard-pal = { path = "../ard-pal" }
ard-log = { path = "../ard-log" }
ard-assets = { path = "../ard-assets" }
ard-input = { path = "../ard-input" }
ard-gltf = { path = "../ard-gltf" }
ard-formats = { path = "../ard-formats" }
tokio.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
crossbeam-channel.workspace = true
crossbeam-utils.workspace = true
async-trait.workspace = true
serde.workspace = true
ron.workspace = true
rayon.workspace = true
bincode.workspace = true
fxhash.workspace = true
futures.workspace = true
tokio-stream.workspace = true
ordered-float.workspace = true
raw-window-handle.workspace = true
winit.workspace = true
image.workspace = true
gltf.workspace = true
egui.workspace = true
half = { version = "2.1.0", features = ["bytemuck"] }

[features]
default = [ "vulkan" ]
vulkan = [ "ard-pal/vulkan" ]

[build-dependencies]
serde.workspace = true
ron.workspace = true